classDiagram
    class User {
        Long id
        String role
        String status
        Long tokenVersion
    }
    class FamilyMember {
        Long id
        Long familyId
        Long userId
        String bindStatus
        String guardianStatus
        Integer applicationVersion
    }
    class ConsentLog {
        Long childId
        Long userId
        Long applyId
        Integer applicationVersion
        String consentType
        String version
        String action
        String guardianStatus
    }
    class PrivacyRequest {
        Long id
        Long requesterId
        String idempotencyKey
        String requestHash
        String status
    }
    class Notice {
        String eventKey
        Long receiverId
        String channel
        String status
    }
    class Result {
        Object code
        Object data
        String message
        String requestId
    }
    class ChildProfile {
        Long userId
        Long familyId
        List allergies
        List dislikes
        List tastes
        String profileStatus
    }
    class ChildPreferencesReq {
        List dislikes
        List tastes
        rejectUnknownField()
    }
    Family "1" --> "*" FamilyMember
    User "1" --> "*" FamilyMember
    User "1" --> "0..1" ChildProfile
    ConsentLog "*" --> "1" FamilyMember : application and version
    ConsentLog "*" --> "1" User : child and parent identities
    JwtInterceptor --> SessionService : authenticate
    SessionService --> User : latest state
    SessionService --> FamilyMember : BOUND families
    AuthServiceImpl --> ChildAuthorizationService
    AuthController --> ChildPreferencesReq : strict input
    AuthServiceImpl --> ChildProfile : profile read and preference update
    FamilyServiceImpl --> ChildAuthorizationService
    ComplianceServiceImpl --> ChildAuthorizationService
    ChildAuthorizationService --> ConsentLog : locked latest grant
    ChildAuthorizationService --> FamilyMember : locked scope
    ChildAuthorizationService --> Family : guardian owner for child access
    FamilyServiceImpl --> NoticeService
    NoticeService --> Notice : same transaction
    ComplianceServiceImpl --> PrivacyRequest
    AuthServiceImpl --> AuditService
    FamilyServiceImpl --> AuditService
    ComplianceServiceImpl --> AuditService
    GlobalExceptionHandler --> FailureAuditService : after rollback
